--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-redux-saga-login",
   "version": "0.0.1",
   "description": "a simple login form using react, redux and redux-saga",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "",
   "scripts": {
     "start": "babel-node src/index.js",
