--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "babel-plugin-root-import"
   ],
   "presets": [
     "react",
