--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "react-redux-saga-login",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "a simple login form using react, redux and redux-saga",
-  "main": "index.min.js",
+  "main": "dist/src/index.js",
   "repository": "",
   "scripts": {
     "start": "babel-node src/index.js",
-    "build": "babel . -o index.min.js --minified --ignore tests,node_modules",
+    "build": "babel -d dist --minified --ignore tests,node_modules .",
     "test:watch": "mocha tests/**/*.js --require babel-polyfill --compilers js:babel-register"
   },
   "author": "Gino Wu",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
+    "babel-polygifill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
